src/prompts/snapshots/promptuity__prompts__multi_select__tests__10_items.snap
---
source: src/prompts/multi_select.rs
---
state: Active
message: test message
hint: none
placeholder: none
input(none):
body(raw):
[38;5;8m◯[39m [4mValue1[0m
[38;5;8m◯[39m [38;5;8mValue2[39m
[38;5;8m◯[39m [38;5;8mValue3[39m
[38;5;8m◯[39m [38;5;8mValue4[39m
[38;5;8m◯[39m [38;5;8mValue5[39m
[38;5;8m◯[39m [38;5;8mValue6[39m
[38;5;8m◯[39m [38;5;8mValue7[39m
[38;5;8m◯[39m [38;5;8mValue8[39m
